<?xml version="1.0" encoding="utf-8"?>
<resources>

     <string name="app_name">StickyNotes FlipBook</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="file">File</string>
    <string name="start_new">New</string>
    <string name="open">Open</string>
    <string name="save">Save</string>
    <string name="saveas">SaveAs</string>
    
    <string name="edit">Edit</string>
    <string name="copy">Copy</string>
    <string name="paste">Paste</string>
    <string name="insert">Insert</string>
    <string name="delete">Delete</string>
    
    <string name="tools">Tools</string>
    <string name="brush">Brush</string>
    <string name="eraser">Eraser</string>
    <string name="speed">Speed</string>
    <string name="color">Color</string>
    
    <string name="leftarrow">&lt;</string>
    <string name="rightarrow">&gt;</string>
    <string name="paint">Paint</string>
    <string name="flipIt">Flip It!</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="flipbtn">FlipBtn</string>
    
    <string name="sml">Small</string>
	<string name="med">Medium</string>
	<string name="lrg">Large</string>
	
</resources>
